<resources>
    <string name="app_name">Roll a Pass</string>
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_show">Show Password</string>
    <string name="action_copy_username">Copy Username</string>
    <string name="action_copy_password">Copy Password</string>
    <string name="action_view_browser">Open in Browser</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_master_password">Master Password</string>
    <string name="title_activity_new_account">Add Account</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_delete">Delete this account?</string>

    <string name="hint_account_website">Website</string>
    <string name="hint_account_username">Username</string>
    <string name="hint_account_password">Password</string>

    <string name="character_number">%d characters</string>
    <string name="title_activity_account">Account Details</string>
    <string name="error_wrong_password">Password Incorrect</string>

    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm New Password</string>
    <string name="confirmation_password_changed">Master Password Changed</string>
    <string name="confirmation_password_saved">Master Password Saved</string>
</resources>
